Logs results in UTC time, same as 'docker-compose logs openidc' shows

--- a/openidc1/html-ajax/style.css
+++ b/openidc1/html-ajax/style.css
@@ -2,3 +2,12 @@ body {
   font-family: sans-serif;
   margin: 2em;
 }
+
+#log .older {
+  display: none;
+}
+
+#log .timestamp {
+  color: #999;
+  margin-right: 1em;
+}
